# Princeps

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .verify_db.py  CLAUDE_CODE_DEBUG_BRIEF.md  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  RAID_REPORT.md  README.md  RECOMMENDATIONS.md  SECURITY.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start.bat  start.sh
.Jules/: palette.md
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: frontend.yml  security.yml  tests.yml
.jules/: bolt.md  palette.md  sentinel.md
apps/console/: .eslintrc.cjs  .eslintrc.json  App.tsx  Dockerfile  README.md  constants.ts  eslint.config.mjs  index.html  metadata.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
apps/princeps_console/: app.py
brain/: __init__.py
brain/core/: __init__.py  db.py  models.py  schemas.py
brain/distillation/: __init__.py  distillation_service.py
brain/ingestion/: __init__.py  ingest_service.py
brain/interface/: __init__.py  brain_api.py  brain_cli.py  test_scenarios.py
brain/migrations/: env.py  script.py.mako
brain/observability/: __init__.py  logging_config.py  metrics_reporter.py  run_logger.py
brain/resilience/: __init__.py  batch_utils.py  error_handler.py  idempotency_service.py  retry_manager.py
brain/security/: __init__.py  access_control.py  security_scanner.py  security_utils.py  tenant_isolation.py
brain_layer/: README.md  __init__.py
brain_layer/01_document_ingestion/: __init__.py  ingest_pdfs.py  (+2 more)
docs/: DEBRIEF.md
framework/: __init__.py  config.py
tests/: conftest.py  test_api_constraints.py  test_idempotency.py  test_ingestion.py  test_logging.py  test_perf_runs.py  test_retrieval.py  test_retry.py  test_retry_logic.py  test_schema_constraints.py  test_security.py  test_security_limits.py  test_skills.py  test_tenant_propagation.py  test_vector_index.py
(+110 files in other folders)
